--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,13 +3,14 @@ activity-compose = "1.7.0"
 androidx-test-ext-junit = "1.1.5"
 coil-compose = "2.3.0"
 com-android-application = "8.1.0-alpha11"
-compose-bom = "2023.04.00"
+compose-bom = "2023.04.01"
 compose-ui = "1.4.1"
 core-ktx = "1.10.0"
 espresso-core = "3.5.1"
 gson = "2.9.0"
 junit = "4.13.2"
 kotlin-compiler = "1.4.5"
+ksp = "1.8.20-1.0.11"
 lifecycle-runtime-ktx = "2.6.1"
 material = "1.0.1"
 org-jetbrains-kotlin-android = "1.8.20"
@@ -46,6 +47,7 @@ ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview
 
 [plugins]
 com-android-application = { id = "com.android.application", version.ref = "com-android-application" }
+com-google-devtools-ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
 org-jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "org-jetbrains-kotlin-android" }
 
 [bundles]
